Container and spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,9 @@ p {
 }
 
 .container {
-    margin: 40px;
+    max-width: 1440px;
+    padding: 0 50px;
+    margin: 50px auto;
 }
 
 /* ------ Header ------ */
@@ -69,7 +71,7 @@ main {
     grid-gap: 30px;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(4, 1fr);
-    padding: 50px 0;
+    padding: 80px 0;
 }
 
 .box1, .box2, .box3, .box4 {
